# Ros-noetic-tiago-pick-and-place

./: CMakeLists.txt  README.md  package.xml
action/: ArmMove.action  TiagoMove.action
include/rosnavigatePnP/: armfunctions.h  detector.h  tiago_client.h  tiago_server.h  utilities.h
launch/: rosnavigatePnP.launch  scannerandclient.launch
src/: apriltagdetected.cpp  arm_manipulator.cpp  armfunctions.cpp  barrelscanner.cpp  detector.cpp  tiago_client.cpp  tiago_server.cpp  utilities.cpp
src/headers/: navigation_methods.h  scan_methods.h  utils.h
src/utils/: navigation_methods.cpp  scan_methods.cpp  utils.cpp
srv/: Aprildetect.srv  Detection.srv  Scan.srv  barrelscan.srv
